...
    "public_place" -> "Closed"
    "food" -> "Closed"
    else -> "Inactive"
}

fun String.getCategoryStatusActionMarkInactiveText(): String = when (this) {
    "graffiti" -> "Mark as Painted Over"
    "sculpture" -> "Mark as Removed"
    "architecture" -> "Mark as Demolished"
    "nature" -> "Mark as Gone"
    "public_place" -> "Mark as Closed"
    "food" -> "Mark as Closed"
    else -> "Mark as Inactive"
...
